--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "mocha $(find test -name '*.js')",
     "local": "babel-node --presets es2015 src/index.js",
-    "start": "cd src/models && sequelize db:migrate && cd ../ && nodemon src/index.js",
-    "build": "babel --presets es2015 -d lib/ src -s --ignore 'node_modules/**/*.js' && nodemon lib/index.js",
+    "start": "cd src/models && sequelize db:migrate && cd ../ && nodemon index.js",
+    "build": "babel --presets es2015 -d lib/ src -s --ignore 'node_modules/**/*.js' && cd src/models && sequelize db:migrate && cd ../.. && nodemon lib/index.js",
     "clean": "rm -rf lib && mkdir lib"
   },
   "author": "Denis",
@@ -18,7 +18,13 @@
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "nodemailer": "^6.0.0",
     "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-linkedin": "^1.0.0",
+    "passport-linkedin-oauth2": "^1.6.1",
+    "passport-local": "^1.0.0",
     "pg": "^7.8.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.1",
